--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: "Execute bucket.yml - Create Cloudformation Stack"
           command: |
              aws cloudformation deploy --template-file bucket.yml --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
-             --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+             --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}" --region us-east-1
       - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
 workflows:
