--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,6 @@ jobs:
 workflows:
   workflow:
     jobs:
-      - create_and_deploy_front_end
+      - create_and_deploy_front_end:
+           context:
+             - CLI
